--- a/apps/voting/dev/vote-ingress.yaml
+++ b/apps/voting/dev/vote-ingress.yaml
@@ -2,8 +2,8 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: traefik-web-ui
-  namespace: kube-system
+  name: vote
+  namespace: dev
   annotations:
     kubernetes.io/ingress.class: traefik
 spec:
