--- a/apps/voting/dev/vote-dep.yaml
+++ b/apps/voting/dev/vote-dep.yaml
@@ -23,6 +23,9 @@ spec:
       - image: schoolofdevops/vote
         imagePullPolicy: Always
         name: vote
+        envFrom:
+          - configMapRef:
+              name: vote
         ports:
         - containerPort: 80
           protocol: TCP
