- voting app becomes instavote - use project based namespaces instead of env based

--- a/apps/instavote/dev/redis-svc.yaml
+++ b/apps/instavote/dev/redis-svc.yaml
@@ -6,7 +6,7 @@ metadata:
     role: redis
     tier: back
   name: redis
-  namespace: dev
+  namespace: instavote
 spec:
   selector:
     app: redis
