--- a/apps/instavote/dev/db-deploy.yaml
+++ b/apps/instavote/dev/db-deploy.yaml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: db
-  namespace: dev
+  namespace: instavote
 spec:
   replicas: 1
   selector:
