--- a/apps/instavote/dev/vote-cm.yaml
+++ b/apps/instavote/dev/vote-cm.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: vote
-  namespace: dev
+  namespace: instavote
 data:
   OPTION_A: EMACS
   OPTION_B: VI
