--- a/projects/instavote/dev/redis-deploy.yaml
+++ b/projects/instavote/dev/redis-deploy.yaml
@@ -24,4 +24,12 @@ spec:
         ports:
         - containerPort: 6379
           protocol: TCP
+        volumeMounts:
+          - name: redis
+            subPath: redis.conf
+            mountPath: /etc/redis.conf
+      volumes:
+      - name: redis
+        configMap:
+          name: redis
       restartPolicy: Always
