--- a/projects/instavote/dev/vote-deploy.yaml
+++ b/projects/instavote/dev/vote-deploy.yaml
@@ -27,7 +27,7 @@ spec:
         tier: front
     spec:
       containers:
-      - image: schoolofdevops/vote
+      - image: schoolofdevops/vote:movies
         imagePullPolicy: Always
         name: vote
         ports:
