catalogue pod added

--- a/projects/mogambo/dev/cataloguedb-deploy.yml
+++ b/projects/mogambo/dev/cataloguedb-deploy.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: catalogue-db
-  namespace: instavote
+  namespace: mogambo
   labels:
     app: catalogue-db
     env: dev
