--- a/projects/mogambo/dev/catalogue-svc.yml
+++ b/projects/mogambo/dev/catalogue-svc.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: catalogue
-  namespace: instavote
+  namespace: mogambo
   labels:
     app: catalogue
     env: dev
