--- a/projects/mogambo/dev/cataloguedb-configmap.yml
+++ b/projects/mogambo/dev/cataloguedb-configmap.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: catalogue-db
-  namespace: instavote
+  namespace: mogambo
 data:
   MYSQL_ROOT_PASSWORD: ""
   MYSQL_ALLOW_EMPTY_PASSWORD: "true"
