--- a/projects/mogambo/dev/cataloguedb-svc.yml
+++ b/projects/mogambo/dev/cataloguedb-svc.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: catalogue-db
-  namespace: instavote
+  namespace: mogambo
 spec:
   selector:
     app: catalogue-db
