- updated the code to support tutorial like step by step learning

--- a/projects/instavote/dev/db-deploy.yaml
+++ b/projects/instavote/dev/db-deploy.yaml
@@ -16,6 +16,7 @@ spec:
         app: postgres
         role: db
         tier: back
+        version: "9.4"
     spec:
       containers:
       - image: postgres:9.4
