--- a/projects/instavote/dev/vote-svc.yaml
+++ b/projects/instavote/dev/vote-svc.yaml
@@ -1,20 +1,5 @@
 ---
-apiVersion: v1
-kind: Service
+apiVersion:
+kind:
 metadata:
-  labels:
-    role: svc
-    tier: front
-  name: vote
-  namespace: instavote
 spec:
-  selector:
-    app: vote
-  ports:
-  - port: 80
-    protocol: TCP
-    targetPort: 80
-  type: NodePort
-  externalIPs:
-    - 10.40.1.26
-    - 10.40.1.25
