--- a/projects/instavote/dev/vote-rs.yaml
+++ b/projects/instavote/dev/vote-rs.yaml
@@ -1,34 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata: 
-  name: results
+  name: vote
   namespace: instavote
 spec: 
-  replicas: 4
+  replicas: 15
   strategy:
     type: RollingUpdate
     rollingUpdate: 
-      maxSurge: 1
+      maxSurge: 2 
       maxUnavailable: 1 
   revisionHistoryLimit: 4
   paused: false
   minReadySeconds: 20
   selector: 
     matchLabels: 
-      role: results
+      role: vote
     matchExpressions: 
-      - {key: version, operator: In, values: [v1, v2, v3, latest]}
+      - {key: version, operator: In, values: [v1, v2, v3]}
   template: 
     metadata:
-      name: results
+      name: vote
       labels:
-        app: node
-        role: results
-        version: latest
+        app: python
+        role: vote
+        version: v1
     spec:
       containers:
         - name: app
-          image: schoolofdevops/vote-result:latest
+          image: schoolofdevops/vote:ergerg
           ports:
             - containerPort: 80
               protocol: TCP
