--- a/projects/instavote/dev/vote-svc.yaml
+++ b/projects/instavote/dev/vote-svc.yaml
@@ -1,20 +1,4 @@
----
-apiVersion: v1
-kind: Service
+apiVersion: 
+kind: Pod
 metadata:
-  name: vote 
-  labels: 
-    role: vote 
 spec:
-  selector: 
-    role: vote 
-    version: v1 
-  ports: 
-    - port: 80 
-      targetPort: 80 
-      nodePort: 30000
-  type: NodePort 
-  externalIPs: 
-    - 128.199.86.28
-    - 128.199.86.98
-
