mini project spec

--- a/projects/instavote/dev/worker-deploy.yaml
+++ b/projects/instavote/dev/worker-deploy.yaml
@@ -10,14 +10,11 @@ spec:
     rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
-  revisionHistoryLimit: 4
-  paused: false
   minReadySeconds: 20
+  xxx
+  xxx
   selector:
-    matchLabels:
-      role: worker
-    matchExpressions:
-      - {key: version, operator: In, values: [v1, v2, v3, latest]}
+    xxx
   template:
     metadata:
       name: worker
@@ -27,5 +24,4 @@ spec:
         version: latest
     spec:
       containers:
-        - name: worker
-          image: schoolofdevops/vote-worker:latest
+      - xxx
