--- a/projects/instavote/dev/results-svc.yaml
+++ b/projects/instavote/dev/results-svc.yaml
@@ -6,15 +6,6 @@ metadata:
   labels: 
     role: results
 spec:
-  selector: 
-    role: results
-  ports: 
-    - port: 81 
-      targetPort: 80 
-      nodePort: 30001
-  type: NodePort 
-  externalIPs: 
-    - 128.199.86.28
-    - 128.199.86.98
+  xxx
 
 
