--- a/projects/mogambo/dev/network-policy.yml
+++ b/projects/mogambo/dev/network-policy.yml
@@ -6,13 +6,30 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app: front-end
+      app: catalogue-db
   policyTypes:
   - Ingress
   - Egress
   ingress:
   - from:
     - ipBlock: 
-        cidr: 172.17.0.0/16
+        cidr: 10.233.64.0/18
         except: 
-        - 172.17.1.0/24
+        - 10.233.75.11/32
+    - namespaceSelector:
+        matchLabels:
+          project: test
+    - podSelector:
+        matchLabels:
+          app: catalogue
+    ports:
+    - protocol: TCP
+      port: 80
+  egress:
+  - to:
+    - ipBlock:
+        cidr: 172.17.0.0/16
+    ports:
+    - protocol: TCP
+      port: 3306
+
