--- a/ingress/traefik/traefik-ds.yaml
+++ b/ingress/traefik/traefik-ds.yaml
@@ -19,24 +19,27 @@ spec:
         k8s-app: traefik-ingress-lb
         name: traefik-ingress-lb
     spec:
+      hostNetwork: true
       serviceAccountName: traefik-ingress-controller
       terminationGracePeriodSeconds: 60
-      hostNetwork: true
       containers:
       - image: traefik
         name: traefik-ingress-lb
         ports:
         - name: http
           containerPort: 80
-          hostPort: 80
         - name: admin
           containerPort: 8080
         securityContext:
-          privileged: true
+          capabilities:
+            drop:
+            - ALL
+            add:
+            - NET_BIND_SERVICE
         args:
-        - -d
-        - --web
+        - --api
         - --kubernetes
+        - --logLevel=INFO
 ---
 kind: Service
 apiVersion: v1
@@ -53,4 +56,3 @@ spec:
     - protocol: TCP
       port: 8080
       name: admin
-  type: NodePort
