updated labels for traefik, svc

--- a/ingress/traefik/traefik-ds.yaml
+++ b/ingress/traefik/traefik-ds.yaml
@@ -46,6 +46,8 @@ apiVersion: v1
 metadata:
   name: traefik-ingress-service
   namespace: kube-system
+  labels:
+    k8s-app: traefik-ingress-lb
 spec:
   selector:
     k8s-app: traefik-ingress-lb
