--- a/projects/instavote/prod/worker-deploy.yaml
+++ b/projects/instavote/prod/worker-deploy.yaml
@@ -11,10 +11,8 @@ spec:
       maxSurge: 1
       maxUnavailable: 1
   minReadySeconds: 20
-  xxx
-  xxx
   selector:
-    xxx
+    role: worker
   template:
     metadata:
       name: worker
