--- a/projects/instavote/prod/results-deploy.yaml
+++ b/projects/instavote/prod/results-deploy.yaml
@@ -1,8 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata: 
-  name: results
+metadata:
+  name: result
   namespace: instavote
-spec: 
-  xxx
-
+spec:
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 2
+      maxUnavailable: 1
+  revisionHistoryLimit: 4
+  paused: false
+  replicas: 2
+  minReadySeconds: 20
+  selector:
+    matchLabels:
+      role: result
+  template:
+    metadata:
+      name: vote
+      labels:
+        app: python
+        role: result
+        version: v2
+    spec:
+      containers:
+        - name: app
+          image: schoolofdevops/vote-result
+          ports:
+            - containerPort: 80
+              protocol: TCP
