--- a/projects/instavote/prod/vote-deploy.yaml
+++ b/projects/instavote/prod/vote-deploy.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: schoolofdevops/vote:v2
+          image: schoolofdevops/vote:movies
           ports:
             - containerPort: 80
               protocol: TCP
