added custom values for grafana and prometheus

--- a/projects/instavote/prod/vote-deploy.yaml
+++ b/projects/instavote/prod/vote-deploy.yaml
@@ -30,3 +30,10 @@ spec:
           ports:
             - containerPort: 80
               protocol: TCP
+          resources:
+            limits:
+              cpu: "200m"
+              memory: "250Mi"
+            requests:
+              cpu: "100m"
+              memory: "50Mi"
