--- a/projects/instavote/dev/vote-svc.yaml
+++ b/projects/instavote/dev/vote-svc.yaml
@@ -1,4 +1,15 @@
-apiVersion: 
-kind: Pod
+---
+apiVersion: v1
+kind: Service
 metadata:
+  name: vote
+  labels:
+    role: vote
 spec:
+  selector:
+    role: vote
+  ports:
+    - port: 80
+      targetPort: 80
+      nodePort: 30000
+  type: NodePort
