--- a/helper/helm/values/grafana-customvalues.yaml
+++ b/helper/helm/values/grafana-customvalues.yaml
@@ -63,14 +63,14 @@ service:
   labels: {}
 
 ingress:
-  enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
+  enabled: true
+  annotations: 
+    kubernetes.io/ingress.class: traefik
     # kubernetes.io/tls-acme: "true"
   labels: {}
   path: /
   hosts:
-    - chart-example.local
+    - grafana.example.com
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
